--- a/index.scss
+++ b/index.scss
@@ -125,7 +125,7 @@ button,
   white-space: nowrap;
   &:hover {
     background-color: var(--light-clr);
-    border: 1px solid var(var(--main-clr));
+    border: 1px solid var(--main-clr);
     color: var(--main-clr);
   }
 }
