--- a/index.css
+++ b/index.css
@@ -102,6 +102,7 @@ button,
 .btn {
   background-color: var(--main-clr);
   padding: 15px 30px;
+  border: 1px solid var(--main-clr);
   border-radius: 5px;
   color: #fff;
   font: 20px main-medium;
@@ -110,7 +111,6 @@ button,
 button:hover,
 .btn:hover {
   background-color: var(--light-clr);
-  border: 1px solid var(--main-clr);
   color: var(--main-clr);
 }
 
@@ -143,9 +143,9 @@ nav {
 nav.mobile {
   min-height: 100vh;
   width: 100%;
+  left: 0;
   top: 0;
-  right: 0;
-  position: absolute;
+  position: fixed;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -155,6 +155,7 @@ nav.mobile {
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   color: #060e1a;
+  z-index: 2;
 }
 nav.mobile a {
   font: 20px main-semibold;
@@ -233,7 +234,7 @@ nav a:not(:last-child):hover::after {
   background-color: rgba(242, 245, 250, 0.8);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
-  z-index: 1;
+  z-index: 2;
   padding: 0 3rem;
 }
 .hero header {
