--- a/style.scss
+++ b/style.scss
@@ -130,10 +130,6 @@ button,
   }
 }
 
-body {
-  @include col(7rem, initial, initial);
-}
-
 .flex {
   display: flex;
 }
@@ -147,36 +143,27 @@ body {
   margin: 0 auto;
 }
 
+main {
+  @include col(7rem);
+}
+
+.hero header {
+  @include row(1rem, space-between);
+}
+
 nav {
+  @include row(3rem);
   font: 18px main-regular;
   color: var(--sec-clr);
 }
 
-nav.mobile {
-  min-height: 100vh;
-  width: 100%;
-  left: 0;
-  top: 0;
-  position: fixed;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
-  padding: 2rem;
-  background-color: rgba(242, 245, 250, 0.8);
-  backdrop-filter: blur(5px);
-  color: #060e1a;
-  z-index: 2;
-  a {
-    font: 20px main-semibold;
-  }
-  .close {
-    align-self: end;
-  }
-}
-
-nav.desktop {
-  @include row(3rem);
+.nav-icon {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 1.5rem;
+  right: 3rem;
+  z-index: 3;
 }
 
 nav a:not(:last-child) {
@@ -202,70 +189,81 @@ nav a:not(:last-child) {
 }
 
 @media (width > $tablet) {
-  nav.mobile,
-  .burger {
+  .nav-icon {
     display: none;
   }
 }
 
 @media (max-width: $tablet) {
-  .burger {
-    display: block;
-  }
-  nav.desktop {
+  nav {
     display: none;
+    min-height: 100vh;
+    width: 100%;
+    left: 0;
+    top: 0;
+    position: fixed;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    padding: 2rem;
+    background-color: rgba(242, 245, 250, 0.8);
+    backdrop-filter: blur(5px);
+    color: #060e1a;
+    z-index: 2;
+    a {
+      font: 20px main-semibold;
+    }
+    .nav-icon {
+      display: flex;
+    }
   }
 }
 
 @media (max-width: $mobile) {
   .container {
-    width: 95%;
+    width: 90%;
   }
+}
+
+.fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0 3rem;
+  background-color: rgba(242, 245, 250, 0.8);
+  backdrop-filter: blur(5px);
+  z-index: 2;
+}
+
+@media (max-width: $tablet) {
+  .fixed-header {
+    padding: 0.5rem;
+  }
+}
+
+header {
+  min-height: 10vh;
 }
 
 .hero {
   background-image: linear-gradient(to bottom right, #d8eff2, #d3d0e1);
-  min-height: 100vh;
   .container {
     @include col(5rem, initial, initial);
   }
   header,
-  main {
+  .hero-wrapper {
     @include row(2rem);
   }
-  .fixed-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(242, 245, 250, 0.8);
-    backdrop-filter: blur(5px);
-    z-index: 2;
-    padding: 0 3rem;
-  }
-  header {
-    min-height: 10vh;
-  }
-  .logo {
-    min-width: 100px;
-  }
-  main {
-    min-height: 60vh;
-  }
-  .hero-img {
-    flex-basis: 60%;
-    img {
-      width: 100%;
-    }
-  }
+  padding-bottom: 7rem;
   .text {
     @include col(2rem, space-between, start);
-    flex-basis: 40%;
   }
 }
 
 @media (max-width: $tablet) {
-  .hero main {
+  .hero .hero-wrapper {
     @include col();
     flex-direction: column-reverse;
     .text {
@@ -286,7 +284,7 @@ nav a:not(:last-child) {
     left: -100px;
     z-index: -1;
   }
-  main {
+  .text {
     flex-basis: 30%;
     @include col(3rem, space-between, start);
 
@@ -307,7 +305,7 @@ nav a:not(:last-child) {
 
 .features {
   text-align: center;
-  main {
+  .features-wrapper {
     @include row(4rem, center);
     flex-wrap: wrap;
   }
@@ -347,10 +345,15 @@ nav a:not(:last-child) {
 }
 
 .pricing {
+  .pricing-header {
+    @include col();
+  }
   text-align: center;
-  main {
-    @include row(4rem, center);
-    flex-wrap: wrap;
+  .cards-wrapper {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3rem;
   }
   .flex {
     align-self: center;
@@ -384,10 +387,10 @@ nav a:not(:last-child) {
     background-color: #fff;
     @include col(2rem, center);
     @include shadow();
-    width: 360px;
-    min-height: 520px;
     border-radius: 10px;
+    padding: 1rem;
     header {
+      text-align: center;
       z-index: 1;
     }
     span {
@@ -412,10 +415,11 @@ nav a:not(:last-child) {
     }
   }
   .card::before {
+    background-image: url("/svgs/wave.svg");
     transform: scaleY(0);
     transform-origin: top;
     position: absolute;
-    content: url("./svgs/wave.svg");
+    content: "";
     top: 0;
     left: 0;
   }
@@ -440,60 +444,23 @@ nav a:not(:last-child) {
   }
 }
 
-.news {
-  h2 {
-    text-align: center;
-  }
-  main {
-    @include row(2rem, center, start);
-    flex-wrap: wrap;
-  }
-  figure {
-    flex-basis: 40%;
-  }
-  span,
-  h5 {
-    white-space: nowrap;
-  }
-  .spans {
-    @include row();
-  }
-  img {
-    width: 100%;
-    margin-bottom: 2rem;
-  }
-  figcaption {
-    @include col(2rem, center, start);
-    width: 70%;
-    margin-left: 1rem;
+@media (max-width: $tablet) {
+  .pricing .cards-wrapper {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
-
 @media (max-width: $mobile) {
-  .news {
-    main {
-      gap: 5rem;
-    }
-    figure {
-      flex-basis: 100%;
-      text-align: center;
-    }
-    figcaption {
-      width: 100%;
-      align-items: center;
-      margin-left: 0;
-    }
+  .pricing .cards-wrapper {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
 .review {
   header {
     text-align: center;
-    min-width: 340px;
-    max-width: 680px;
     margin: 0 auto 3rem;
   }
-  main {
+  .map {
     background-image: url("./imgs/map.png"),
       linear-gradient(to right, var(--light-clr), #fff);
     background-repeat: no-repeat;
@@ -501,10 +468,6 @@ nav a:not(:last-child) {
     background-position: center;
     width: 100%;
     height: 700px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-content: space-around;
-    align-content: space-around;
     position: relative;
     div {
       position: absolute;
@@ -541,7 +504,54 @@ nav a:not(:last-child) {
   }
 }
 
+.news {
+  h2 {
+    text-align: center;
+  }
+  .wrapper {
+    @include row(2rem, center, start);
+    flex-wrap: wrap;
+  }
+  figure {
+    flex-basis: 40%;
+  }
+  span,
+  h5 {
+    white-space: nowrap;
+  }
+  .spans {
+    @include row();
+  }
+  img {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+  figcaption {
+    @include col(2rem, center, start);
+    width: 70%;
+    margin-left: 1rem;
+  }
+}
+
+@media (max-width: $mobile) {
+  .news {
+    .wrapper {
+      gap: 5rem;
+    }
+    figure {
+      flex-basis: 100%;
+      text-align: center;
+    }
+    figcaption {
+      width: 100%;
+      align-items: center;
+      margin-left: 0;
+    }
+  }
+}
+
 footer {
+  margin-top: 7rem;
   background-color: var(--light-clr);
   padding: 5rem 0;
   .container {
@@ -586,7 +596,44 @@ footer {
     margin: 0 auto;
     @include row(1rem, space-between);
     input {
-      max-width: 150px;
+      max-width: 100px;
     }
+  }
+  .social img {
+    width: 20px;
+  }
+}
+
+@media (max-width: 360px) {
+  h1 {
+    font: 31px main-bold;
+  }
+  h2 {
+    font: 15px main-semibold;
+    margin-bottom: 3rem;
+  }
+  h3 {
+    font: 12.5px main-medium;
+    margin-bottom: 2rem;
+  }
+  h4 {
+    font: 11px main-medium;
+    color: var(--sec-clr);
+  }
+  h5 {
+    font: 8px main-regular;
+  }
+  p {
+    font: 9px main-regular;
+    color: var(--sec-clr);
+    line-height: 1.6;
+  }
+  span {
+    color: var(--main-clr);
+  }
+  button,
+  input,
+  input::placeholder {
+    font: 10px main-medium !important;
   }
 }
