--- a/style.css
+++ b/style.css
@@ -373,10 +373,12 @@ header {
   gap: 2rem;
 }
 .pricing .cards-wrapper {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 3rem;
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+  flex-wrap: wrap;
 }
 .pricing .flex {
   align-self: center;
@@ -446,11 +448,15 @@ header {
   color: var(--main-clr);
 }
 .pricing .card::before {
+  content: "";
   background-image: url("/svgs/wave.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
   transform: scaleY(0);
   transform-origin: top;
   position: absolute;
-  content: "";
   top: 0;
   left: 0;
 }
