--- a/style.scss
+++ b/style.scss
@@ -350,10 +350,9 @@ header {
   }
   text-align: center;
   .cards-wrapper {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 3rem;
+    margin-top: 4rem;
+    @include row(4rem, center);
+    flex-wrap: wrap;
   }
   .flex {
     align-self: center;
@@ -415,11 +414,15 @@ header {
     }
   }
   .card::before {
+    content: "";
     background-image: url("/svgs/wave.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
     transform: scaleY(0);
     transform-origin: top;
     position: absolute;
-    content: "";
     top: 0;
     left: 0;
   }
