--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 $tablet: 1200px;
 $mobile: 768px;
+$xsmall: 360px;
 
 @mixin row($gap: 1rem, $justify: space-between, $items: center) {
   display: flex;
@@ -139,8 +140,26 @@ button,
 }
 
 .container {
-  width: 80%;
+  width: 1140px;
   margin: 0 auto;
+}
+
+@media (max-width: $tablet) {
+  .container {
+    width: 700px;
+  }
+}
+
+@media (max-width: $mobile) {
+  .container {
+    width: 600px;
+  }
+}
+
+@media (max-width: $xsmall) {
+  .container {
+    width: 400px;
+  }
 }
 
 main {
@@ -248,6 +267,7 @@ header {
 }
 
 .hero {
+  margin-bottom: 7rem;
   background-image: linear-gradient(to bottom right, #d8eff2, #d3d0e1);
   .container {
     @include col(5rem, initial, initial);
@@ -258,6 +278,7 @@ header {
   }
   padding-bottom: 7rem;
   .text {
+    flex-basis: 50%;
     @include col(2rem, space-between, start);
   }
 }
@@ -275,13 +296,14 @@ header {
 }
 
 .preview {
+  margin-bottom: 7rem;
   .container {
     @include row(2rem, space-around, stretch);
     position: relative;
   }
   img:nth-child(1) {
     position: absolute;
-    left: -100px;
+    left: -150px;
     z-index: -1;
   }
   .text {
@@ -304,6 +326,7 @@ header {
 }
 
 .features {
+  margin-bottom: 7rem;
   text-align: center;
   .features-wrapper {
     @include row(4rem, center);
@@ -316,7 +339,8 @@ header {
     border-radius: 5px;
     @include shadow();
     flex-basis: 18%;
-    min-width: 260px;
+    width: 260px;
+    min-width: 230px;
     &:after {
       content: url("./svgs/arrow.png");
       display: block;
@@ -345,6 +369,7 @@ header {
 }
 
 .pricing {
+  margin-bottom: 7rem;
   .pricing-header {
     @include col();
   }
@@ -384,11 +409,12 @@ header {
   .card {
     position: relative;
     background-color: #fff;
-    @include col(2rem, center);
+    @include col(2rem);
     @include shadow();
     border-radius: 10px;
-    padding: 1rem;
+    padding: 2rem;
     header {
+      @include col(0, start);
       text-align: center;
       z-index: 1;
     }
@@ -459,11 +485,15 @@ header {
 }
 
 .review {
+  margin-bottom: 7rem;
   header {
     text-align: center;
     margin: 0 auto 3rem;
   }
   .map {
+    position: relative;
+    left: 0;
+    top: 0;
     background-image: url("./imgs/map.png"),
       linear-gradient(to right, var(--light-clr), #fff);
     background-repeat: no-repeat;
@@ -471,7 +501,7 @@ header {
     background-position: center;
     width: 100%;
     height: 700px;
-    position: relative;
+    // position: relative;
     div {
       position: absolute;
       &:nth-child(1) {
@@ -508,6 +538,7 @@ header {
 }
 
 .news {
+  margin-bottom: 7rem;
   h2 {
     text-align: center;
   }
@@ -554,7 +585,6 @@ header {
 }
 
 footer {
-  margin-top: 7rem;
   background-color: var(--light-clr);
   padding: 5rem 0;
   .container {
