--- a/css/style.scss
+++ b/css/style.scss
@@ -500,7 +500,7 @@ header {
     position: relative;
     left: 0;
     top: 0;
-    background-image: url("./imgs/map.png"),
+    background-image: url("../imgs/map.png"),
       linear-gradient(to right, var(--light-clr), #fff);
     background-repeat: no-repeat;
     background-size: cover;
