--- a/css/style.css
+++ b/css/style.css
@@ -129,23 +129,28 @@ button:hover,
 }
 
 .container {
-  width: 1140px;
   margin: 0 auto;
+  padding: 0 1rem;
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 576px) {
   .container {
-    width: 700px;
+    max-width: 540px;
   }
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .container {
-    width: 600px;
+    max-width: 720px;
   }
 }
-@media (max-width: 360px) {
+@media (min-width: 992px) {
   .container {
-    width: 400px;
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
   }
 }
 main {
