--- a/css/style.scss
+++ b/css/style.scss
@@ -245,15 +245,6 @@ nav a:not(:last-child) {
     a {
       font: 20px main-semibold;
     }
-    .nav-icon {
-      display: flex;
-    }
-  }
-}
-
-@media (max-width: $mobile) {
-  .container {
-    width: 90%;
   }
 }
 
@@ -354,8 +345,7 @@ header {
     border-radius: 5px;
     @include shadow();
     flex-basis: 18%;
-    width: 260px;
-    min-width: 230px;
+    min-width: 240px;
     &:after {
       content: url("./svgs/arrow.png");
       display: block;
@@ -383,16 +373,18 @@ header {
   }
 }
 
+@media (max-width: $mobile) {
+  .features figure {
+    min-width: 180px;
+    padding: 1rem;
+  }
+}
+
 .pricing {
   margin-bottom: 7rem;
   .pricing-header {
+    text-align: center;
     @include col();
-  }
-  text-align: center;
-  .cards-wrapper {
-    margin-top: 4rem;
-    @include row(4rem, center);
-    flex-wrap: wrap;
   }
   .flex {
     align-self: center;
@@ -421,8 +413,14 @@ header {
       border-radius: 20px;
     }
   }
+  .cards-wrapper {
+    margin-top: 4rem;
+    @include row(4rem, center);
+    flex-wrap: wrap;
+  }
   .card {
     position: relative;
+    width: 100%;
     background-color: #fff;
     @include col(2rem);
     @include shadow();
@@ -457,10 +455,11 @@ header {
   .card::before {
     content: "";
     background-image: url("/svgs/wave.svg");
-    background-size: contain;
+    background-size: cover;
+    background-position: bottom;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100%;
+    height: 35%;
     transform: scaleY(0);
     transform-origin: top;
     position: absolute;
@@ -494,8 +493,16 @@ header {
   }
 }
 @media (max-width: $mobile) {
-  .pricing .cards-wrapper {
-    grid-template-columns: repeat(1, 1fr);
+  .pricing {
+    .cards-wrapper {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .card {
+      padding: 1rem;
+    }
+    .selected {
+      font-size: 12px;
+    }
   }
 }
 
@@ -516,8 +523,9 @@ header {
     background-position: center;
     width: 100%;
     height: 700px;
-    // position: relative;
-    div {
+    img {
+      width: 50px;
+      height: 50px;
       position: absolute;
       &:nth-child(1) {
         top: 15%;
@@ -664,6 +672,9 @@ footer {
 }
 
 @media (max-width: 360px) {
+  .logo {
+    width: 100px;
+  }
   h1 {
     font: 31px main-bold;
   }
