--- a/css/style.scss
+++ b/css/style.scss
@@ -48,6 +48,10 @@ $xsmall: 360px;
   --sec-clr: #51565e;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 *,
 *::before,
 *::after {
@@ -476,7 +480,7 @@ header {
     height: 100%;
     top: 5px;
     left: -1%;
-    z-index: -2;
+    z-index: -2 !important;
   }
   .card:hover {
     &::before,
