--- a/css/style.scss
+++ b/css/style.scss
@@ -678,6 +678,11 @@ footer {
   .logo {
     width: 100px;
   }
+  .nav-icon {
+    width: 20px;
+    height: 20px;
+    right: 1.5rem;
+  }
   h1 {
     font: 31px main-bold;
   }
