--- a/css/style.css
+++ b/css/style.css
@@ -735,6 +735,11 @@ footer .copy {
   .logo {
     width: 100px;
   }
+  .nav-icon {
+    width: 20px;
+    height: 20px;
+    right: 1.5rem;
+  }
   h1 {
     font: 31px main-bold;
   }
