--- a/css/style.scss
+++ b/css/style.scss
@@ -352,7 +352,7 @@ header {
     flex-basis: 18%;
     min-width: 240px;
     &:after {
-      content: url("./svgs/arrow.png");
+      content: url("../svgs/arrow.png");
       display: block;
       margin-top: 1rem;
     }
