--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,11 @@
 }
 
 html {
-  overflow-x: hidden !important;
   font-family: sans-serif;
+}
+
+body {
+  overflow-x: hidden !important;
 }
 
 *,
