--- a/css/style.scss
+++ b/css/style.scss
@@ -51,8 +51,9 @@ $xsmall: 360px;
 html {
     font-family: sans-serif;
 }
-body {
-    overflow-x: hidden !important;
+body,
+html {
+    overflow: hidden !important;
 }
 
 *,
