--- a/css/style.scss
+++ b/css/style.scss
@@ -48,9 +48,9 @@ $xsmall: 360px;
     --sec-clr: #51565e;
 }
 
+body,
 html {
-    font-family: sans-serif;
-    overflow: hidden !important;
+    overflow-x: hidden;
 }
 
 *,
