--- a/css/style.scss
+++ b/css/style.scss
@@ -48,9 +48,13 @@ $xsmall: 360px;
     --sec-clr: #51565e;
 }
 
-body,
 html {
     overflow-x: hidden;
+}
+
+.animated-element {
+    overflow: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 
 *,
@@ -713,5 +717,14 @@ footer {
     input,
     input::placeholder {
         font: 10px main-medium !important;
+    }
+}
+
+@media not all and (min-resolution: 0.001dpcm) {
+    @supports (-webkit-appearance: none) {
+        /* Safari-specific styles here */
+        body {
+            overflow-x: hidden;
+        }
     }
 }
