--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,12 @@
   --main-clr: #2657a4;
   --light-clr: #e9eef6;
   --sec-clr: #51565e;
-}
-
-html {
   overflow-x: hidden;
 }
 
 .animated-element {
   overflow: hidden;
-  -webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch; /* Add vendor prefixes as needed */
 }
 
 *,
