--- a/css/style.scss
+++ b/css/style.scss
@@ -46,15 +46,12 @@ $xsmall: 360px;
     --main-clr: #2657a4;
     --light-clr: #e9eef6;
     --sec-clr: #51565e;
-}
-
-html {
     overflow-x: hidden;
 }
 
 .animated-element {
     overflow: hidden;
-    -webkit-overflow-scrolling: touch;
+    -webkit-overflow-scrolling: touch; /* Add vendor prefixes as needed */
 }
 
 *,
