--- a/css/style.css
+++ b/css/style.css
@@ -476,13 +476,6 @@ header {
   font: 20px main-semibold;
   color: #060e1a;
 }
-.pricing .card:hover header * {
-  color: #fff !important;
-}
-.pricing .card:hover button {
-  background-color: var(--main-clr);
-  color: var(--light-clr);
-}
 .pricing .card p {
   margin-bottom: 1rem;
 }
@@ -490,7 +483,14 @@ header {
   background-color: var(--light-clr);
   color: var(--main-clr);
 }
-.pricing .card::before {
+.pricing .card button:hover {
+  background-color: var(--main-clr);
+  color: var(--light-clr);
+}
+.pricing .card.best header * {
+  color: #fff;
+}
+.pricing .card.best:before {
   content: "";
   background-image: url("/svgs/wave.svg");
   background-size: cover;
@@ -498,15 +498,11 @@ header {
   background-repeat: no-repeat;
   width: 100%;
   height: 35%;
-  transform: scaleY(0);
-  transform-origin: top;
   position: absolute;
   top: 0;
   left: 0;
 }
-.pricing .card:after {
-  transform: scaleY(0);
-  transform-origin: top;
+.pricing .card.best:after {
   content: "";
   background-image: linear-gradient(to bottom, #fff, var(--main-clr));
   position: absolute;
@@ -516,9 +512,6 @@ header {
   top: 5px;
   left: -1%;
   z-index: -2 !important;
-}
-.pricing .card:hover::before, .pricing .card:hover::after {
-  transform: scaleY(1);
 }
 
 @media (max-width: 1200px) {
