--- a/css/style.scss
+++ b/css/style.scss
@@ -437,54 +437,44 @@ header {
             font: 20px main-semibold;
             color: #060e1a;
         }
-        &:hover {
-            header * {
-                color: #fff !important;
-            }
-            button {
-                background-color: var(--main-clr);
-                color: var(--light-clr);
-            }
-        }
         p {
             margin-bottom: 1rem;
         }
         button {
             background-color: var(--light-clr);
             color: var(--main-clr);
+            &:hover {
+                background-color: var(--main-clr);
+                color: var(--light-clr);
+            }
         }
     }
-    .card::before {
-        content: "";
-        background-image: url("/svgs/wave.svg");
-        background-size: cover;
-        background-position: bottom;
-        background-repeat: no-repeat;
-        width: 100%;
-        height: 35%;
-        transform: scaleY(0);
-        transform-origin: top;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
-    .card:after {
-        transform: scaleY(0);
-        transform-origin: top;
-        content: "";
-        background-image: linear-gradient(to bottom, #fff, var(--main-clr));
-        position: absolute;
-        border-radius: 10px;
-        width: 102%;
-        height: 100%;
-        top: 5px;
-        left: -1%;
-        z-index: -2 !important;
-    }
-    .card:hover {
-        &::before,
-        &::after {
-            transform: scaleY(1);
+    .card.best {
+        header * {
+            color: #fff;
+        }
+        &:before {
+            content: "";
+            background-image: url("/svgs/wave.svg");
+            background-size: cover;
+            background-position: bottom;
+            background-repeat: no-repeat;
+            width: 100%;
+            height: 35%;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        &:after {
+            content: "";
+            background-image: linear-gradient(to bottom, #fff, var(--main-clr));
+            position: absolute;
+            border-radius: 10px;
+            width: 102%;
+            height: 100%;
+            top: 5px;
+            left: -1%;
+            z-index: -2 !important;
         }
     }
 }
