--- a/css/style.scss
+++ b/css/style.scss
@@ -278,7 +278,10 @@ header {
 }
 
 .hero {
+    width: 100%;
     margin-bottom: 7rem;
+    padding-bottom: 7rem;
+
     background-image: linear-gradient(to bottom right, #d8eff2, #d3d0e1);
     .container {
         @include col(5rem, initial, initial);
@@ -287,7 +290,6 @@ header {
     .hero-wrapper {
         @include row(2rem);
     }
-    padding-bottom: 7rem;
     .text {
         flex-basis: 50%;
         @include col(2rem, space-between, start);
@@ -307,6 +309,7 @@ header {
 }
 
 .preview {
+    width: 100%;
     margin-bottom: 7rem;
     position: relative;
     .container {
@@ -507,12 +510,13 @@ header {
 
 .review {
     margin-bottom: 7rem;
+    position: relative;
+    width: 100%;
     header {
         text-align: center;
         margin: 0 auto 3rem;
     }
     .map {
-        position: relative;
         left: 0;
         top: 0;
         background-image: url("../imgs/map.png"),
@@ -525,10 +529,10 @@ header {
         img {
             width: 50px;
             height: 50px;
-            position: absolute;
+            position: relative;
             &:nth-child(1) {
                 top: 15%;
-                left: 10%;
+                left: 20%;
             }
             &:nth-child(2) {
                 top: 45%;
@@ -536,7 +540,7 @@ header {
             }
             &:nth-child(3) {
                 top: 25%;
-                left: 75%;
+                left: 65%;
             }
             &:nth-child(4) {
                 top: 70%;
@@ -544,7 +548,7 @@ header {
             }
             &:nth-child(5) {
                 top: 75%;
-                left: 80%;
+                left: 70%;
             }
         }
         p {
