--- a/css/style.css
+++ b/css/style.css
@@ -333,15 +333,15 @@ header {
   gap: 3rem;
 }
 .preview .text div:nth-child(2) h3:before {
-  content: url("../svgs/pre-1.png");
+  content: url("../svgs/pre-1.webp");
   margin-right: 1rem;
 }
 .preview .text div:nth-child(3) h3:before {
-  content: url("../svgs/pre-2.png");
+  content: url("../svgs/pre-2.webp");
   margin-right: 1rem;
 }
 .preview .text div:nth-child(4) h3:before {
-  content: url("../svgs/pre-3.png");
+  content: url("../svgs/pre-3.webp");
   margin-right: 1rem;
 }
 
@@ -375,7 +375,7 @@ header {
   min-width: 240px;
 }
 .features figure:after {
-  content: url("../svgs/arrow.png");
+  content: url("../svgs/arrow.webp");
   display: block;
   margin-top: 1rem;
 }
@@ -551,7 +551,7 @@ header {
 .review .map {
   left: 0;
   top: 0;
-  background-image: url("../imgs/map.png"), linear-gradient(to right, var(--light-clr), #fff);
+  background-image: url("../imgs/map.webp"), linear-gradient(to right, var(--light-clr), #fff);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
